# project1_Iguminov_Sergey_M25-555

./: .gitignore  Makefile.txt  README.md  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
