[tool.poetry]
name = "project1-iguminov-sergey-m25-555"
version = "0.1.0"
description = "Adventure game in MOD genre with random events and puzzles"
authors = [
    "Sergey Iguminov <Sergey.iguminov@yandex.ru>"
]
readme = "README.md"
packages = [
    { include = "labyrinth_game", from = "." }
]

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
ruff= "^0.1.0"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"